--- a/src/components/common/aq-dropdown.html
+++ b/src/components/common/aq-dropdown.html
@@ -7,7 +7,7 @@
 
 <dom-module id='aq-dropdown'>
 
-	<style is="custom-style" include="iron-flex iron-flex-alignment iron-positioning">
+	<style  include="iron-flex iron-flex-alignment iron-positioning">
 	</style>
   
 	<style>
@@ -28,7 +28,7 @@
 			font-weight: var(--dropdown-font-weight, normal);
 			font-size: var(--dropdown-font-size,13px);
 			height: var(--dropdown-height, 30px);
-			background-color: var(--dropdown-background-color, white);
+			background-color: var(--dropdown-button-color, white);
 		}
 
 		paper-button, span#category {
@@ -65,6 +65,7 @@
 			color: var(--dropdown-icon-color, black);
 			border-radius: 5px;
 			margin-right: -10px;
+			--padding-right: 10px;
 		}
 		
 	</style>
