--- a/src/components/community/aq-community-home-post-item.html
+++ b/src/components/community/aq-community-home-post-item.html
@@ -3,7 +3,7 @@
 <link rel='import' href='../../icons/aq-iconset.html'>
 
 <dom-module id="aq-community-home-post-item">
-  <style is="custom-style" include="iron-flex iron-positioning iron-flex-alignment">
+  <style  include="iron-flex iron-positioning iron-flex-alignment">
   </style>
 
   <style>
