--- a/src/components/editor/aq-editor-edit-nonprogrammer-indicator.html
+++ b/src/components/editor/aq-editor-edit-nonprogrammer-indicator.html
@@ -7,7 +7,7 @@
 
 
 <dom-module id='aq-nonprogrammer-indicator-item'>
-	<style is="custom-style" include="iron-flex iron-flex-alignment  iron-positioning"></style>
+	<style  include="iron-flex iron-flex-alignment  iron-positioning"></style>
 	<style>
 		input {
 			margin:10px;
