--- a/src/components/editor/aq-editor-edit-nonprogrammer.html
+++ b/src/components/editor/aq-editor-edit-nonprogrammer.html
@@ -18,7 +18,7 @@
 <link rel='import' href='../../icons/aq-iconset.html'>
 
 <dom-module id='aq-editor-edit-nonprogrammer'>
-	<style is="custom-style" include="iron-flex iron-flex-alignment  iron-positioning"></style>
+	<style  include="iron-flex iron-flex-alignment  iron-positioning"></style>
 
 	<style>
 
