--- a/src/components/editor/aq-editor-edit-programmer.html
+++ b/src/components/editor/aq-editor-edit-programmer.html
@@ -9,7 +9,7 @@
 <link rel='import' href ="./aq-editor-sidebar-run.html">
 
 <dom-module id="aq-editor-edit-programmer">
-<style is="custom-style" include="iron-flex iron-flex-alignment  iron-positioning"></style>
+<style  include="iron-flex iron-flex-alignment  iron-positioning"></style>
 
 <style>
 
@@ -35,7 +35,7 @@
 
 </style>
 
-<style is="custom-style" include="iron-flex iron-positioning"></style>
+<style  include="iron-flex iron-positioning"></style>
 
   <template>
        <div class="fit"> 
