--- a/src/components/editor/aq-editor-edit.html
+++ b/src/components/editor/aq-editor-edit.html
@@ -15,7 +15,7 @@
 <link rel='import' href='../../icons/aq-iconset.html'>
 
 <dom-module id="aq-editor-edit">
-  <style is="custom-style" include="iron-flex iron-flex-alignment  iron-positioning">
+  <style  include="iron-flex iron-flex-alignment  iron-positioning">
   </style> 
 
 <style>
@@ -40,7 +40,7 @@
   paper-toolbar {
       --paper-toolbar-height:40px;
       --paper-toolbar-color:#333a56;
-      --paper-toolbar-background:#c9e2ea;--#c1c6da;--#ced2e2;--#dadde9;--#9bbef2;--#ddf2f0;
+      --paper-toolbar-background:#9ecbda;--#c9e2ea;
        border-bottom: 1px solid #333a56;
   }
 
@@ -65,6 +65,7 @@
   #rightPanel {
     background-color:#f3f9fa;--#f3f4f8;
     border-left: 5px solid #333a56;
+    color:#02558b;
   }
 
   .toolbarPlayIcon {
@@ -76,7 +77,7 @@
     
 </style>
 
-<style is="custom-style" include="iron-flex iron-positioning"></style>
+<style  include="iron-flex iron-positioning"></style>
 
 <template>
     <iron-ajax
