--- a/src/components/editor/aq-editor-home-menu.html
+++ b/src/components/editor/aq-editor-home-menu.html
@@ -4,7 +4,7 @@
 
 
 <dom-module id='aq-editor-home-menu'>
-	<style is="custom-style" include="iron-flex iron-flex-alignment  iron-positioning"></style>
+	<style  include="iron-flex iron-flex-alignment  iron-positioning"></style>
   
 	<style>
 
