--- a/src/components/editor/aq-editor-toolbar.html
+++ b/src/components/editor/aq-editor-toolbar.html
@@ -5,7 +5,7 @@
 
 
 <dom-module id='aq-editor-toolbar'>
-	<style is="custom-style" include="iron-flex iron-flex-alignment iron-positioning"></style>
+	<style  include="iron-flex iron-flex-alignment iron-positioning"></style>
 
 	<style>
 
@@ -28,7 +28,7 @@
 		  --paper-toolbar-height:40px;
 		  --paper-toolbar-width:100px;
 		  --paper-toolbar-color:teal;
-  		  --paper-toolbar-background:#e5f1f5;--#dadde9; --#ebeff1; --#f1e091;
+  		  --paper-toolbar-background:#e5f1f5;
   		  --border-right: 5px solid #333a56;
 		}
 
