--- a/src/layouts/aq-analyze-main.html
+++ b/src/layouts/aq-analyze-main.html
@@ -8,7 +8,8 @@
 <link rel="import" href="../components/analyze/aq-analyze-detail.html">
 
 <dom-module id="aq-analyze-main">
-  <style is="custom-style" include="iron-flex iron-flex-alignment iron-positioning"></style>
+  <style  include="iron-flex iron-flex-alignment iron-positioning">
+  </style>
    <style>
     #panel {
       height:100%;
