--- a/src/layouts/aq-editor-main.html
+++ b/src/layouts/aq-editor-main.html
@@ -10,7 +10,7 @@
 
 
 <dom-module id="aq-editor-main">
-  <style is="custom-style" include="iron-flex iron-flex-alignment  iron-positioning"></style>
+  <style  include="iron-flex iron-flex-alignment  iron-positioning"></style>
    <style>
     #panel {
       height:100%;
