--- a/src/components/analyze/aq-analyze-backtest-comparison-item.html
+++ b/src/components/analyze/aq-analyze-backtest-comparison-item.html
@@ -7,7 +7,7 @@
 <link rel='import' href='../../icons/aq-iconset.html'>
 
 <dom-module id='aq-analyze-backtest-comparison-item'>	
-	<style is="custom-style" include="iron-flex iron-flex-alignment iron-positioning">
+	<style  include="iron-flex iron-flex-alignment iron-positioning">
 	</style>
 
 	<style>	
