--- a/src/components/analyze/aq-analyze-home-backtest-item2.html
+++ b/src/components/analyze/aq-analyze-home-backtest-item2.html
@@ -10,7 +10,7 @@
 <link rel='import' href='../../icons/aq-iconset.html'>
 
 <dom-module id='aq-analyze-home-backtest-item2'>	
-	<style is="custom-style" include="iron-flex iron-flex-alignment iron-positioning">
+	<style  include="iron-flex iron-flex-alignment iron-positioning">
 	</style>
 
 	<style>
@@ -18,6 +18,9 @@
 			margin-bottom: 13px;
 			height:240px;
 			min-width: 500px; 
+			--border-top:2px solid teal !important;
+			border:1px solid teal;
+			
 		}
 		
 		a {
@@ -62,8 +65,8 @@
 		}
 
 	 	#content :hover{
-			color:teal;
-			z-index:20;
+			--color:teal;
+			--z-index:20;
 		}
 
 		.detail {
@@ -117,6 +120,7 @@
 
 		#content {
 			height:70px;
+			border-bottom:1px solid teal;
 		}
 
 		.metric {
@@ -131,6 +135,10 @@
 
 		.container-int {
 			height:30px;
+		}
+
+		paper-icon-button {
+			color:teal;
 		}
 
 
