--- a/src/components/analyze/aq-analyze-home-menu.html
+++ b/src/components/analyze/aq-analyze-home-menu.html
@@ -3,7 +3,7 @@
 <link rel='import' href='../../icons/aq-iconset.html'>
 
 <dom-module id='aq-analyze-home-menu'>
-	<style is="custom-style" include="iron-flex iron-flex-alignment iron-positioning"></style>
+	<style  include="iron-flex iron-flex-alignment iron-positioning"></style>
   
 	<style>
 
