--- a/src/components/aq-sidebar.html
+++ b/src/components/aq-sidebar.html
@@ -10,7 +10,7 @@
 <link rel='import' href='../icons/aq-iconset.html'>
 
 <dom-module id='aq-sidebar'>
-  <style is="custom-style" include="iron-flex iron-flex-alignment iron-positioning"></style>
+  <style  include="iron-flex iron-flex-alignment iron-positioning"></style>
   <style>
     :host {
       --sidebar-text: {
@@ -21,7 +21,7 @@
     }
 
     #content {
-       border-right: 1px solid #e5e5e5; 
+       border-right: 1px solid #9ecbda;--#e5e5e5; 
        background-color: #e5f1f5;
     }
 
@@ -38,7 +38,7 @@
 
     paper-menu {
       padding-bottom: 0;
-      background-color: #e5f1f5;--#333a56;--#30415d;
+      background-color: #e5f1f5;
       opacity: var(--dark-primary-opacity);
     }
 
@@ -72,9 +72,7 @@
       }
 
       --paper-item-selected: {
-        background-color: #99ced4; 
-        --width:80%;
-        --margin:0 auto;
+        background-color: #9ecbda;
       }
     }
 
