--- a/src/components/aq-user-menu.html
+++ b/src/components/aq-user-menu.html
@@ -4,7 +4,7 @@
 <link rel="import" href="./profile-img.html">
 
 <dom-module id='aq-user-menu'>
-    <style is="custom-style" include="iron-flex iron-flex-alignment">
+    <style  include="iron-flex iron-flex-alignment">
     </style>
 
     <style>
