--- a/src/components/common/aq-backtest-metric-item.html
+++ b/src/components/common/aq-backtest-metric-item.html
@@ -4,7 +4,7 @@
 
 
 <dom-module id='aq-backtest-metric-item'>
-	<style is="custom-style" include="iron-flex iron-flex-alignment iron-positioning">
+	<style  include="iron-flex iron-flex-alignment iron-positioning">
 	</style>
   	
 	<style>
@@ -15,7 +15,7 @@
 		
 		paper-card{
 			width:100%;
-			border-top: 2px solid teal;
+			border-top: 2px solid #cf6766;
 			color:#333a56;
 		}
 
@@ -38,7 +38,7 @@
 
 	</style>
 
-    <style is="custom-style">
+    <style >
       paper-tooltip.giant {
         --paper-tooltip: {
           font-size: 15px;
