--- a/src/components/community/aq-community-home.html
+++ b/src/components/community/aq-community-home.html
@@ -11,7 +11,7 @@
 
 <dom-module id="aq-community-home">
     
-    <style is="custom-style" include="iron-flex iron-flex-alignment iron-positioning">
+    <style  include="iron-flex iron-flex-alignment iron-positioning">
     </style>
   
     <style>
