--- a/src/components/community/aq-community-postdetail-content.html
+++ b/src/components/community/aq-community-postdetail-content.html
@@ -1,13 +1,14 @@
 <link rel='import' href='../../../bower_components/iron-flex-layout/iron-flex-layout-classes.html'>
 <link rel="import" href="../../../bower_components/marked-element/marked-element.html">
+<link rel="import" href="../../../bower_components/prism-element/prism-highlighter.html">
 
-
+<link rel="import" href="../help/aq-help-marked-item.html">
 <link rel="import" href="../common/aq-backtest-detail-item.html">
 <link rel="import" href="../profile-img.html">
 
 <dom-module id="aq-community-postdetail-content">
    
-    <style is="custom-style" include="iron-flex iron-flex-alignment iron-positioning">
+    <style  include="iron-flex iron-flex-alignment iron-positioning">
     </style>
    
    <style>
@@ -61,11 +62,15 @@
             <i style="color:teal">on {{format(item.updatedAt)}}</i></span>
           </div>
       </div>
-      <marked-element markdown="{{item.markdownText}}">
-        <div class="markdown-html"></div>
-      </marked-element>
 
-      <aq-backtest-detail-item></aq-backtest-detail-item>
+      <!--prism-highlighter></prism-highlighter-->
+      <!--marked-element markdown="{{item.markdownText}}">
+        <div class="markdown-html"></div>
+      </marked-element-->
+
+      <aq-help-marked-item help-text="{{item.markdownText}}"></aq-help-marked-item>
+
+      <!--aq-backtest-detail-item></aq-backtest-detail-item-->
       
     </div>
 
@@ -91,6 +96,10 @@
               "Content-Type": "application/json"};  
           }
           
+          //hljs.configure({languages:['Markdown','Julia','julia']});
+            /*$('pre code').each(function(i, block) {
+               hljs.highlightBlock(block);
+            });*/          
       },
 
       getinitials: function(item) {
