--- a/src/components/community/aq-community-postdetail-header.html
+++ b/src/components/community/aq-community-postdetail-header.html
@@ -7,7 +7,7 @@
 
 <dom-module id="aq-community-postdetail-header">
    
-    <style is="custom-style" include="iron-flex iron-flex-alignment iron-positioning">
+    <style  include="iron-flex iron-flex-alignment iron-positioning">
     </style>
 
    <style>
