--- a/src/components/community/aq-community-postdetail-reply.html
+++ b/src/components/community/aq-community-postdetail-reply.html
@@ -5,7 +5,7 @@
 
 <dom-module id="aq-community-postdetail-reply">
 
-   <style is="custom-style" include="iron-flex iron-flex-alignment iron-positioning">
+   <style  include="iron-flex iron-flex-alignment iron-positioning">
    </style>
    
   <style>
