--- a/src/components/community/aq-community-postdetail.html
+++ b/src/components/community/aq-community-postdetail.html
@@ -11,7 +11,7 @@
 
 <dom-module id="aq-community-postdetail">
 
-    <style is="custom-style" include="iron-flex iron-flex-alignment iron-positioning">
+    <style  include="iron-flex iron-flex-alignment iron-positioning">
     </style>
    
    <style>
