--- a/src/components/editor/aq-editor-edit-backtest-screen.html
+++ b/src/components/editor/aq-editor-edit-backtest-screen.html
@@ -7,7 +7,7 @@
 
 
 <dom-module id='aq-editor-edit-backtest-screen'>
-	<style is="custom-style" include="iron-flex iron-flex-alignment  iron-positioning"></style>
+	<style  include="iron-flex iron-flex-alignment  iron-positioning"></style>
 	
 	<style>
 		#container {
