--- a/src/components/editor/aq-editor-edit-nonprogrammer-optimizer.html
+++ b/src/components/editor/aq-editor-edit-nonprogrammer-optimizer.html
@@ -7,7 +7,7 @@
 
 
 <dom-module id='aq-nonprogrammer-constraint-item'>
-	<style is="custom-style" include="iron-flex iron-flex-alignment  iron-positioning"></style>
+	<style  include="iron-flex iron-flex-alignment  iron-positioning"></style>
 	<style>
 		
 		input {
