--- a/src/components/editor/aq-editor-edit-nonprogrammer-screener.html
+++ b/src/components/editor/aq-editor-edit-nonprogrammer-screener.html
@@ -4,7 +4,7 @@
 <link rel='import' href='../../icons/aq-iconset.html'>
 
 <dom-module id='aq-nonprogrammer-screener-item'>
-	<style is="custom-style" include="iron-flex iron-flex-alignment  iron-positioning"></style>
+	<style  include="iron-flex iron-flex-alignment  iron-positioning"></style>
 	<style>
 		input {
 			margin:10px;
