--- a/src/components/editor/aq-editor-edit-sidebar-universe.html
+++ b/src/components/editor/aq-editor-edit-sidebar-universe.html
@@ -7,7 +7,7 @@
 <link rel="import" href="../../../bower_components/paper-button/paper-button.html">
 
 <dom-module id='aq-editor-edit-sidebar-universe'>
-	<style is="custom-style" include="iron-flex iron-flex-alignment  iron-positioning"></style>
+	<style  include="iron-flex iron-flex-alignment  iron-positioning"></style>
 
 	<style>
 		#container {
@@ -74,7 +74,7 @@
     
 
 	</style>
-	<style is="custom-style" include="iron-flex iron-positioning"></style>	
+	<style  include="iron-flex iron-positioning"></style>	
 	<template>
 		
 	<div class="flex" id='container'>
