--- a/src/components/editor/aq-editor-home-strategy-item.html
+++ b/src/components/editor/aq-editor-home-strategy-item.html
@@ -4,7 +4,7 @@
 
 <dom-module id = 'aq-editor-home-strategy-item'>
 
-	<style is="custom-style" include="iron-flex iron-flex-alignment iron-positioning"></style>
+	<style  include="iron-flex iron-flex-alignment iron-positioning"></style>
   
 	<style>
 
@@ -19,10 +19,11 @@
       	}
 
 	    .row {
-	        border-bottom: 1px solid #e5e5e5;
-	        border: 1px solid #d0d0d0;
+	        --border-bottom: 1px solid #e5e5e5;
+	        border: 1px solid #9ecbda;
+	        border-top: none;
 	        background-color: #e5f1f5;
-	        color:#02558b;--#cf6766;
+	        color:#02558b;
 	      }
 
         .row {
@@ -32,7 +33,6 @@
 	        font-weight: 400;
 	        font-size: 13px;
 	        min-width: 640px;
-
 	    }
 
      	.row paper-checkbox {
@@ -47,7 +47,7 @@
 
 	    
         .row.hover {
-	        background:#e5f1f5; ---#e7e8ee; --#b2b6c5; --#afb4c9; --#828bab;--#616b91; --#E0F2F1;
+	        background:#bbdae5;--#c9e2ea;--#acd2df;#e5f1f5; ---#e7e8ee; --#b2b6c5; --#afb4c9; --#828bab;--#616b91; --#E0F2F1;
 	    }
    
         .strategy-name {
