--- a/src/components/editor/aq-editor-home.html
+++ b/src/components/editor/aq-editor-home.html
@@ -11,7 +11,7 @@
 <link rel='import' href='../../dialog/aq-editor-strategy-compare-dialog.html'>
 
 <dom-module id="aq-editor-home">
- 	<style is="custom-style" include="iron-flex iron-flex-alignment iron-positioning"></style>
+ 	<style  include="iron-flex iron-flex-alignment iron-positioning"></style>
   
     <style>
       
@@ -22,13 +22,12 @@
       }
 
       .header {
-      	border: 1px solid #d0d0d0;
+      	border: 1px solid #9ecbda;--#d0d0d0;
         padding: 0 55px;
         line-height: 56px;
         font-size: 18px;
         font-weight: bold;
-        border-bottom: 1px solid #e5e5e5;
-        background-color:#99ced4;
+        background-color:#9ecbda;--#90c3d4;--#acd2df;
         min-width:640px;
 
       }
