--- a/src/components/profile-img.html
+++ b/src/components/profile-img.html
@@ -2,7 +2,7 @@
 <link rel='import' href='../icons/aq-iconset.html'>
 
 <dom-module id="profile-img">
-  <style is="custom-style" include="iron-flex iron-flex-alignment">
+  <style  include="iron-flex iron-flex-alignment">
   </style>
 
   <style>
@@ -53,7 +53,6 @@
       <iron-icon icon="check"></iron-icon>
     </div>
   </template>
-</dom-module>
 
 <script>
   Polymer({
