--- a/src/layouts/aq-community-main.html
+++ b/src/layouts/aq-community-main.html
@@ -8,7 +8,7 @@
 
 
 <dom-module id="aq-community-main">
-  <style is="custom-style" include="iron-flex iron-flex-alignment  iron-positioning"></style>
+  <style  include="iron-flex iron-flex-alignment  iron-positioning"></style>
    <style>
   </style>
   <template>
