--- a/src/layouts/aq-dashboard-main.html
+++ b/src/layouts/aq-dashboard-main.html
@@ -19,7 +19,9 @@
 <link rel="import" href='../components/community/aq-community-home-searchbar.html'>
 
 <dom-module id="aq-dashboard-main">
-  <style is="custom-style" include="iron-flex iron-flex-alignment  iron-positioning"></style>
+  
+  <style include="iron-flex iron-flex-alignment iron-positioning">
+  </style>
 
   <style>
     :host {
