--- a/src/layouts/aq-help-main.html
+++ b/src/layouts/aq-help-main.html
@@ -4,7 +4,7 @@
 <link rel="import" href="../components/help/aq-help-home.html">
 
 <dom-module id="aq-help-main">
-  <style is="custom-style" include="iron-flex iron-flex-alignment  iron-positioning"></style>
+  <style  include="iron-flex iron-flex-alignment  iron-positioning"></style>
    <style>
     #panel {
       height:100%;
