--- a/src/components/common/aq-backtest-detail-item.html
+++ b/src/components/common/aq-backtest-detail-item.html
@@ -3,7 +3,7 @@
 <link rel='import' href='../../../bower_components/paper-tabs/paper-tabs.html'>
 <link rel='import' href='../../../bower_components/paper-tabs/paper-tab.html'>
 <link rel='import' href='../../../bower_components/paper-card/paper-card.html'>
-
+<link rel='import' href='../../../bower_components/iron-signals/iron-signals.html'>
 <link rel='import' href='../../../bower_components/iron-flex-layout/iron-flex-layout-classes.html'>
 
 <link rel='import' href='./aq-backtest-metric-item.html'>
@@ -117,18 +117,25 @@
 				<template is='dom-if' if="[[lineData]]">
 					<nvd3-line 
 			  			id="lineChart" 
-			  			class="bar1" 
 			  			height=300
 			  			show-legend 
 			  			use-interactive-guideline 
 			  			auto-resize
-			  			no-data="No Data Available!" 
+			  			no-data="Fetching Data" 
 			  			data=[[lineData]]>
 			  		</nvd3-line>
 		  		</template>
 			      
 			    <template is='dom-if' if="[[barData]]">    
-		  		<nvd3-multi-bar id="chart-1" height="300" class="bar" auto-resize show-legend></nvd3-multi-bar>
+			  		<nvd3-multi-bar 
+	  				 	height="300" 
+	  				 	class="bar" 
+  					 	auto-resize 
+	  				 	show-legend
+	  				 	use-interactive-guideline 
+	  				 	no-data="Fetching Data"
+	  				 	data=[[barData]]>	 	
+	  				 </nvd3-multi-bar>
 		  		</template>
 	
 		  		</iron-pages>
@@ -151,6 +158,8 @@
 				</div>
 			</paper-card>	
 		</div>
+
+		<iron-signals id='datasignal' on-iron-signal-point-data='onBacktestData' on-iron-signal-bulk-data='onBacktestData'></iron-signals>
 			
 	</template>
 	<script>
@@ -163,6 +172,12 @@
 					value: true,
 				},
 
+				active:{
+					type:Boolean,
+					value:true,
+					//observer:'_isActiveChanged',
+				},
+
 				metrics:Object,
 
 				graphType: {
@@ -172,6 +187,7 @@
 
 				lineData: {
 					type:Object, 
+					value:[],
 				},
 
 				maxLineData:{
@@ -190,11 +206,18 @@
 				barData: {
 					type:Object, 
 				},
+
+				count:{
+					type:Number,
+					value:0,
+				},
+
+				backtestId:String
 			},
 
 			ready: function() {
 
-				this.lineData = [{
+				/*this.lineData = [{
 					  "color": "#ff7f0e",
 					  "keys" : "graph",
 					  "values": [{
@@ -216,21 +239,83 @@
 					      "x": 5,
 					      "y": 0.794
 					    }]
-					}];
+					}];*/
+			},
+
+			attached: function() {
+				this.async(this.subscribeData, 2000);
 			},
 
 			reset: function() {
 				this.lineData = [];
 				this.barData = [];
-				this.counter = 0;	
+				this.counter = 0;
+			},
+
+			subscribeData: function() {
+				console.log("Fetching Data: " + this.backtestId);
+				this.fire('subscribe-data',{backtestId: this.backtestId});
+			},
+
+			onBacktestData: function(e) {
+				//console.log("Point Start");
+				//console.log("In Backtest Screen: Point");
+			
+				var isArray = Array.isArray(e.detail);
+
+				if (isArray) {
+					this.onBacktestBulkData(e);
+					return;
+				}
+
+				//console.log("Point Start");
+				if (e.detail.outputtype == "performance") {	
+					//console.log(e.detail);
+					this.addLineData(e.detail);
+				}
+				//console.log("Point End");
+			},
+
+			onBacktestBulkData: function(e) {
+				//console.log("In Backtest Screen: Bulk");
+				
+				var data = e.detail;
+				//console.log(data);
+
+				if(data && data.length > 0) {
+					this.reset();
+					this.addLineBulkData(e.detail);	
+				}	
+
+				/*console.log(this.count);
+				if(this.count++ < 10) {
+					console.log("Again");
+					this.async(this.fetchData,1000);	
+					//this.count++;
+				}*/	
+			},		
+
+			addLineBulkData: function(data) {
+				console.log(data.length);
+				console.log("Bulk Start");
+				for(i in data) {
+					if (data[i].outputtype=="performance") {
+						this.addLineData(data[i]);
+					}
+				}
+				console.log("Bulk End");
 			},
 		
 			addLineData: function(data) {
 
+
 				var linepoint = {};
             	linepoint.y = data.netvalue.toFixed(2);
+            	//console.log(linepoint.y)
             	linepoint.x = this.counter++; //new Date(e.detail.date);//
            		
+           		//console.log("Length: " + this.lineData.length);
+
 				if (this.lineData.length) {	
 					this.lineData[0]["values"].push(linepoint);
 					
@@ -251,7 +336,7 @@
 					}
 
 					if (this.lineData[0]["values"].length % 500 == 0) {
-						console.log(this.lineData);
+						//console.log(this.lineData);
 					}
 
 				} else {
