1. Fixed missing token on web-app initialization 2. CSS changes to toolbar 3. Redirect to sign-in in case of certain urls

--- a/src/components/aq-sidebar.html
+++ b/src/components/aq-sidebar.html
@@ -31,11 +31,11 @@
         text-align: left;
         margin-left: 0px !important;
       };
-    }
-    paper-toolbar {
       --paper-toolbar-background: #333a56;
+      border-bottom: 2px solid #cf6766;
+      height:70px;
     }
-
+   
     paper-menu {
       padding-bottom: 0;
       background-color: #e5f1f5;
