--- a/src/components/aq-toolbar.html
+++ b/src/components/aq-toolbar.html
@@ -20,6 +20,10 @@
         text-align: left;
         margin-left: 0px !important;
       };
+
+      --border-top: 5px solid #cf6766;
+      border-bottom: 2px solid #cf6766;
+      height:70px;
     }
   
   paper-toolbar {
