--- a/src/layouts/aq-analyze-main.html
+++ b/src/layouts/aq-analyze-main.html
@@ -26,7 +26,11 @@
 
         <app-route path="/dashboard/analyze/:strategyId" element='aq-analyze-home' bindrouter=""></app-route>
 
+        <app-route path="/dashboard/analyze/:strategyId/:backtestId" element='aq-analyze-detail' bindrouter="" onUrlUpdate=""></app-route>
+        
         <app-route path="/dashboard/analyze/:strategyId/*" element='aq-analyze-detail' bindrouter="" onUrlUpdate=""></app-route>
+
+
 
     </app-router>
   </template>
